# word-test-webui

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PHASE2_FINISHING.md  README.md  REFACTORING.md  api.py  app.py  cli.py  image_convert.py  logging_setup.py  main.py  models.py  omml2mml.xsl  package.json  pyinstaller.spec  pyproject.toml  pytest.ini  requirements.txt  run_app.py  serialization.py  server.js  word_extract.py  word_formula_render.py
.github/workflows/: ci-deploy.yml
alembic/: env.py
alembic/versions/: 1a0e23fe226f_create_users_and_sessions_tables.py  6d6221c278d9_add_test_access_control.py  a8b5c3d7e9f1_add_change_requests.py  e7309514da6f_add_user_profile_fields.py
api/: __init__.py  app.py  config.py  database.py
api/dependencies/: __init__.py  auth.py
api/models/: __init__.py  access.py  attempts.py  auth.py  change_request.py  tests.py
api/routes/: __init__.py  access.py  assets.py  attempts.py  auth.py  change_requests.py  questions.py  statistics.py  tests.py  users.py
api/services/: __init__.py  access_service.py  attempt_service.py  auth_service.py  change_request_service.py  cleanup_service.py  image_service.py  (+2 more)
app/: main.py
core/: __init__.py  serialization.py  word_extract.py
desktop/: .gitignore  README.md  config.json  main.js  package.json  server_entry.py
public/: app.js  index.html  styles.css
resources/: omml2mml.xsl
scripts/: attempts_smoke.md  cli.py  migrate_test_ownership.py  run_app.py
static/: app.js  index.html  styles.css
tests/: test_image_convert.py  test_utils.py  test_word_extract.py
(+42 files in other folders)
