[project]
name = "testmasterbsu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.0",
    "python-docx>=1.2.0",
    "pywin32>=311; sys_platform == 'win32'",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
